# Tatsuo

./: Cargo.toml  Config.toml
src/: config.rs  database.rs  error.rs  event_listeners.rs  global_data.rs  main.rs
src/components/: mod.rs
src/components/music/: join.rs  mod.rs  play.rs
src/utility/: command_checks.rs  mod.rs
