[package]
name = "tatsuo"
version = "0.1.0"
edition = "2021"
description = "Cool discord bot written in rust, using serenity."

[dependencies]
dotenv = "0.15.0"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop", features = ["collector"] }
sqlx = { version = "0.5.10", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "time", "uuid", "json", "offline"] }
tokio = { version = "1.15.0", features = ["full"] }
chrono = "0.4.19"
futures = "0.3.19"
serde_json = "1.0.75"
toml = "0.5.8"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.6"
uuid = { version = "0.8.2", features = ["v4"] }
rand = { version = "0.8.4", features = ["std", "getrandom"] }
serde = { version = "1.0.133", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
derivative = "2.2.0"
tracing-log = "0.1.2"

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"
features = ["serenity"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
default-features = false
features = ["serenity-rustls", "gateway"]


[dependencies.serenity]
default-features = false
features = ["rustls_backend", "builder", "cache", "client", "gateway", "model", "utils", "unstable_discord_api", "collector", "voice"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[patch.crates-io.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
